hsmc-macros/tests/ui/t10_1_during_duplicate_field.stderr
error: field `a` listed twice in `during: tick(...)` — each field can only be borrowed once per during
  --> tests/ui/t10_1_during_duplicate_field.rs:19:25
   |
19 |         during: tick(a, a);
   |                         ^

error[E0405]: cannot find trait `MActions` in this scope
  --> tests/ui/t10_1_during_duplicate_field.rs:26:6
   |
26 | impl MActions for MActionContext<'_> {}
   |      ^^^^^^^^ not found in this scope

error[E0425]: cannot find type `MActionContext` in this scope
  --> tests/ui/t10_1_during_duplicate_field.rs:26:19
   |
26 | impl MActions for MActionContext<'_> {}
   |                   ^^^^^^^^^^^^^^ not found in this scope
